# YTE_WWise_Plugin

./: CMakeLists.txt  README.md
CMake/: FindWWise.cmake
YTEPlugin/: CMakeLists.txt
YTEPlugin/Editor/: CMakeLists.txt  EditorWWisePlugin.cpp  WWiseEditorMeta.hpp  WWiseWidget.cpp  WWiseWidget.hpp
YTEPlugin/Engine/: CMakeLists.txt  ForwardDeclarations.hpp  WWiseEmitter.cpp  WWiseEmitter.hpp  WWiseListener.cpp  WWiseListener.hpp  WWiseMeta.hpp  WWisePlugin.cpp  WWiseSystem.cpp  WWiseSystem.hpp  WWiseView.cpp  WWiseView.hpp
